name:                Second
version:             1.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vstonkus/tictactoe_haskell_2
author:              Visvaldas Stonkus
maintainer:          visvaldas.stonkus@gmail.com
copyright:           2015 VisvaldasStonkus
category:            Web

Build-Type:        Simple
cabal-version:     >= 1.2

executable Second
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:       base
                     , containers
                     , HTTP
                     , text
                     , split
                     , http-client
                     , http-types
                     , io-streams
                     , aeson
                     , MissingH
                     , bytestring
  default-language:    Haskell2010